objects/Contract_and_Revenue__c.object
<CustomObject>
    <fields>
        <fullName>Account_Director_Client_Solutions__c</fullName>
        <label>Account Director, Client Solutions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associate_Biostatistician__c</fullName>
        <label>Associate Biostatistician</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associate_Director_Client_Solutions__c</fullName>
        <label>Associate Director, Client Solutions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associate_Director_Clinical_and_DI__c</fullName>
        <label>Associate Director, Clinical and DI</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associate_Director_Consulting__c</fullName>
        <label>Associate Director, Consulting</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associate_Director_Library_Operations__c</fullName>
        <label>Associate Director, Library Operations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associate_Director_Methodology__c</fullName>
        <label>Associate Director, Methodology</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associate_Director_Operations__c</fullName>
        <label>Associate Director, Operations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associate_Librarian__c</fullName>
        <label>Associate Librarian</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chief_Medical_Officer__c</fullName>
        <label>Chief Medical Officer</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Solutions_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Solutions Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Solutions_Coordinator__c</fullName>
        <label>Client Solutions Coordinator</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_Operations_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinical Operations Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinical_Product_Development_Associate__c</fullName>
        <label>Clinical Product Development Associate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consulting_Services_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consulting Services Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Integrity_Analyst_II__c</fullName>
        <label>Data Integrity Analyst - II</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Integrity_Analyst_I__c</fullName>
        <label>Data Integrity Analyst - I</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Integrity_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Integrity Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dir_of_Analytics_Consulting__c</fullName>
        <label>Director of Analytics, Consulting</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Director_Education_Training__c</fullName>
        <label>Director, Education &amp; Training</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Director_Lead_Data_Management__c</fullName>
        <label>Director/ Lead, Data Management</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Director_Methodology__c</fullName>
        <label>Director, Methodology</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimate_Total__c</fullName>
        <description>Adds all numerical fields on contract and revenue page layout</description>
        <formula>Account_Director_Client_Solutions__c + Associate_Biostatistician__c + Associate_Director_Client_Solutions__c + Associate_Director_Clinical_and_DI__c
+ Associate_Director_Consulting__c + 	Associate_Director_Library_Operations__c + Associate_Director_Methodology__c 
+ Associate_Director_Operations__c + Associate_Librarian__c + Chief_Medical_Officer__c + Client_Solutions_Coordinator__c
+ Clinical_Product_Development_Associate__c + Data_Integrity_Analyst_I__c + Data_Integrity_Analyst_II__c + Director_Education_Training__c 
+ Director_Methodology__c + Director_Lead_Data_Management__c + Dir_of_Analytics_Consulting__c + Evidence_Analyst__c + Global_Head_QMI__c
+ Head_of_Client_Solutions_EU__c + Independent_Contractor__c + Librarian__c + 	Librarian_Assistant__c + Methodology_Associate__c
+ Methodology_Lead__c + Ontology_Specialist__c + Ontology_Specialist_Manager__c + Operations_Associate__c + Performance_Development_Associate__c
+ Performance_Development_Lead__c + Senior_Director_Client_Solutions__c + Sr_Director_Operations__c + Sr_VP_CS__c + Team_Lead_Clinical_Operations__c
+ Team_Lead_Data_Integrity__c + VP_Client_Solutions__c + VP_Consulting__c + Vice_President_Knowledge_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimate Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evidence_Analyst__c</fullName>
        <label>Evidence Analyst</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Head_QMI__c</fullName>
        <label>Global Head, QMI</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Head_of_Client_Solutions_EU__c</fullName>
        <label>Head of Client Solutions, EU</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Independent_Contractor__c</fullName>
        <label>Independent Contractor</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Librarian_Assistant__c</fullName>
        <label>Librarian Assistant</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Librarian__c</fullName>
        <label>Librarian</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Library_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Library Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Methodology_Associate__c</fullName>
        <label>Methodology Associate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Methodology_Lead__c</fullName>
        <label>Methodology Lead</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ontology_Specialist_Manager__c</fullName>
        <label>Ontology Specialist Manager</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ontology_Specialist__c</fullName>
        <label>Ontology Specialist</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operations_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operations Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations_Associate__c</fullName>
        <label>Operations Associate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts and Revenues</relationshipLabel>
        <relationshipName>Contracts_and_Revenues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Performance_Development_Associate__c</fullName>
        <label>Performance Development Associate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_Development_Lead__c</fullName>
        <label>Performance Development Lead</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_Development_Tech_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Development/ Tech Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QMI_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QMI Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Senior_Director_Client_Solutions__c</fullName>
        <label>Senior Director, Client Solutions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sr_Director_Operations__c</fullName>
        <label>Senior Director, Operations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sr_VP_CS__c</fullName>
        <label>Senior Vice President, Client Solutions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Lead_Clinical_Operations__c</fullName>
        <label>Team Lead, Clinical Operations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Lead_Data_Integrity__c</fullName>
        <label>Team Lead, Data Integrity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Client_Solutions__c</fullName>
        <label>Vice President, Client Solutions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Consulting__c</fullName>
        <label>Vice President, Consulting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vice_President_Knowledge_Management__c</fullName>
        <label>Vice President, Knowledge Management</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contract and Revenue</label>
    <nameField>
        <label>Contract Estimate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts and Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>